--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~10.0.2",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
+    "@angular/core": "^10.0.14",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~10.0.2",
     "@angular/platform-browser": "~10.0.2",
@@ -27,11 +27,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
+    "@angular/cli": "^10.0.8",
     "@angular/compiler-cli": "~10.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
